--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<img id="imgY" src="img/sample_shard.png" />
 	<img id="imgCr" src="img/sample_shard.png" />
 	<img id="imgCb" src="img/sample_shard.png" />
+	<img id="imgResult" src="img/sample_shard.png" />
 </div>
 
 <script src="pttjpeg.js" type="text/javascript" charset="utf-8"></script>
@@ -143,6 +144,21 @@
 		    dstImgElem.setAttribute("src", url);
 	}
 
+	//Faz o encoding a partir da qualidade do slider
+    var encode = function(value){
+			var encoder = new pttJPEG();
+	    	var v = encoder.version();
+	    	console.log(v);
+	    	var imgElem = document.getElementById("img");;
+		    var origImageData = new encoder.pttImage( getPixelsFromImageElement(imgElem));
+		    var bw = new encoder.ByteWriter();
+		    encoder.encode(value,origImageData,bw);
+		    var url = bw.getImgUrl();
+
+		    var dstImgElem = document.getElementById("imgResult");
+		    dstImgElem.setAttribute("src", url);
+	}
+
 	//Reseta o valor do Slider para um valor inicial
 	var reset = function(value){
 		if(resetSlide){
@@ -164,13 +180,11 @@
 		output.innerHTML = slider.value; 
 		slider.oninput = function() {
 	    	output.innerHTML = this.value;
-	    	encode(parseInt(this.value))
-
+			encode(parseInt(this.value))
 		}	
 		extractY();
 		extractCr()
 		extractCb();
-	    
     }
 </script>
 </body>
