--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@ p{
 	}
 
 	//Faz o encoding a partir da qualidade do slider
-    var encode = function(value){
+    var encode = function(value, yqt = null, uvqt = null){
 			var encoder = new pttJPEG();
 	    	var v = encoder.version();
 	    	console.log(v);
 	    	var imgElem = document.getElementById("img");;
 		    var origImageData = new encoder.pttImage( getPixelsFromImageElement(imgElem));
 		    var bw = new encoder.ByteWriter();
-			m = encoder.encode(value,origImageData,bw);
+			m = encoder.encode(value,origImageData,bw,yqt,uvqt);
 		    var url = bw.getImgUrl();
 
 		    var dstImgElem = document.getElementById("imgResult");
@@ -385,7 +385,9 @@ p{
 			var output4 = document.getElementById("displayTime");
 			output4.innerHTML = m.encodetime;
 
-			console.log(encoder.getQuantizationMatricies());
+			//PEGA AS MATRIZES DE QUANTIZAÇÃO
+			// console.log(encoder.getLumQuantizationMatrix());
+			// console.log(encoder.getCromQuantizationMatrix());
 		
 	}
 
@@ -400,6 +402,50 @@ p{
     	}	
 	}
 
+	// //MATRIZES DE QUANTIZAÇÃO
+	// var userYqt = new Uint32Array([
+	// 	16, 11, 10, 16, 24, 40, 51, 61,
+	// 	12, 12, 14, 19, 26, 58, 60, 55,
+	// 	14, 13, 16, 24, 40, 57, 69, 56,
+	// 	14, 17, 22, 29, 51, 87, 80, 62,
+	// 	18, 22, 37, 56, 68, 109, 103, 77,
+	// 	24, 35, 55, 64, 81, 104, 113, 92,
+	// 	49, 64, 78, 87, 103, 121, 120, 101,
+	// 	72, 92, 95, 98, 112, 100, 103, 99
+	// ]);
+	// var userUvqt = new Uint32Array([
+	// 	16, 11, 10, 16, 24, 40, 51, 61,
+	// 	12, 12, 14, 19, 26, 58, 60, 55,
+	// 	14, 13, 16, 24, 40, 57, 69, 56,
+	// 	14, 17, 22, 29, 51, 87, 80, 62,
+	// 	18, 22, 37, 56, 68, 109, 103, 77,
+	// 	24, 35, 55, 64, 81, 104, 113, 92,
+	// 	49, 64, 78, 87, 103, 121, 120, 101,
+	// 	72, 92, 95, 98, 112, 100, 103, 99
+	// ]);
+
+	//MATRIZES DE QUANTIZAÇÃO
+	var userYqt = new Uint32Array([
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255
+	]);
+	var userUvqt = new Uint32Array([
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255,
+		255,255,255,255,255,255,255,255
+	]);
+
     window.onload = function() {
 	    /**
 	     * Returns an ImageData object 
@@ -410,9 +456,11 @@ p{
 		output.innerHTML = slider.value; 
 		slider.oninput = function() {
 	    	output.innerHTML = this.value;
-			encode(parseInt(this.value));
+			encode(parseInt(this.value),userYqt,userUvqt);
 		}
-		encode(parseInt(this.value));	
+		console.log("index:" + userYqt);
+		console.log("index:" + userUvqt);
+		encode(parseInt(this.value),userYqt,userUvqt);	
 		extractY();
 		extractCr();
 		extractCb();
